# mind-palace

./: .gitignore  .gitlab-ci.yml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  README.md  _ci_canary.py  mkdocs.yml  package.json  pyproject.toml
.claude/: settings.json  settings.local.json  statusline.sh
.claude/commands/: build.md  graduate.md  scribe.md  triage.md
.claude/hooks/: _lib.py  compaction-marker.sh  gate-guard.sh  journal-gate.sh  scope-guard.sh  session-brief.sh  staleness-nudge.sh
.githooks/: post-commit
.github/workflows/: ci.yml  pages.yml  release.yml
agents/ambassador/: __init__.py  agent.py  intent.py  policy.py
cloud/: README.md
cloud/fetcher/: README.md  aggregate.py  handler.py  requirements.txt  sources.py
config/: defaults.toml  loader.py  secrets_backend.py  tuning.toml
config/sweeps/: dreamer-sigma-ab.toml
core/: agent.py  agent_scope.py  chat_events.py  constitution.py  dreams_view.py  effect_proposal.py  integrator.py  integrator_math.py  interface.py  mirror.py  ops_view.py  origin_view.py  provenance.py  recursion.py  recursion_ops.py  reference_view.py  rings.py  scope.py  sealing.py  selfcheck.py  sensing.py  temporal_view.py  velocity_view.py  vitals.py
core/attestation/: __init__.py  attestor.py  crypto.py  record.py  store.py  verify.py
core/complex/: balance.py  blocks.py  build.py  curvature.py  cut.py  hodge.py  laplacian.py  spectral.py  temporal.py  topology.py
core/config/: loader.py
core/curator/: __init__.py  curator.py
core/dreaming/: __init__.py  cluster.py  dreamer.py  interpreters.py  shadow.py
core/factory/: factory.py  tools.py
core/graph/: __init__.py  census.py  conductance.py  sigma_star.py
core/ingest/: amend.py  chunk.py  code_corpus.py  curated.py  dialogue.py  founding.py  index.py  logseq.py  mint_ids.py  pipeline.py  run.py  sync.py  verify.py  watch.py
core/kernel/: provenance.py  recursion_ops.py  rings.py
core/librarian/: __init__.py  librarian.py
core/models/: ollama_client.py
core/research/: __init__.py  airlock.py  criteria.py  curate.py  persist.py  rank.py
core/sandbox/: __init__.py  broker.py  policy.py  runner.py  spec.py
core/stores/: __init__.py  agent_observations.py  authored_supersession.py  catalog.py  causal_edges.py  chat_events.py  chatlog.py  claim_ops.py  code_observations.py  curated_store.py  derived.py  edges.py  observation_history.py  reference_edges.py  runledger.py  sourceset.py  telemetry.py  vectorstore.py  verdicts.py  versions.py
core/temporal/: __init__.py  acquire.py  atlas.py  complex.py  spine.py
core/verdict/: __init__.py  dispositions.py  payload.py
docs/: BUILD-SPEC.md  BUILDER-PROMPT-FORWARD.md  DESKCHECK-QUEUE.md  ORIENTATION.md  PARKING-LOT.md  PROGRESS.md  README.md  TRACKS.md  WHITEPAPER-FORMAL-PROPERTIES.md  WHITEPAPER-TECHNICAL.md  WHITEPAPER.md  WIRING-AUDIT.md  agent-workflow-operators-reference.md  builder-prompt.md  hands-and-the-effector-layer.md  runbook.md  schema.md
docs/archive/: CLAUDE-current-phase-2026-07-03.md  HANDOFF.md  PROGRESS-phases-0-10.md
docs/audits/: archive-recommendation.md  corpus-state-audit-2026-07-verification.md  corpus-state-audit-2026-07.md  prompt-integrity-audit.md
docs/book/: .gitignore  SYNC.md  main.tex  notation.tex  preamble.tex
docs/brainstorms/: agent-causal-loop.md  agent-type-taxonomy.md  authorship-strata.md  book-pedagogy.md  clock-curvature.md  code-as-sensor-stream.md  conductivity-and-reasoning-chains-fable-pass.md  conversation-transcripts-as-latent-sensor.md  core-query-protocol.md  cost-forecasting.md  cq-scope-fable-pass.md  cross-strata-and-multiscale-dreamers.md  cross-strata-substrate-sweep.md  decision-routing.md  doc-code-entanglement.md  dreamer-and-graph-direction.md  durable-chat-blessings.md  dyadic-epistemology.md  edge-dynamics-and-continuum.md  edge-dynamics-lane-b-fable-pass.md  edge-dynamics-vector-field.md  evaluation-harness.md  exhaust-and-ingest-sync.md  external-grounding.md  graph-at-a-past-cut.md  handoff-automation.md  hypothetical-subspace.md  inner-outer-core.md  lifecycle-cli-overhaul.md  local-model-runtime.md  magnetic-laplacian.md  ouroboros-email-identity.md  owner-cockpit.md  past-perturbation-ripple.md  reconciliation-audit.md  reference-integrator.md  retrieval-and-temporal-scaling.md  sector-expert-community.md  self-mapping-the-palace.md  self-sensing.md  (+4 more)
docs/design-notes/: agent-taxonomy.md  agent-workflow.md  agentic-loop.md  alignment-subsystem.md  ambassador-interpretation-and-flow.md  attestation-layer.md  authorship-distance-axis.md  capability-evaluation-harness.md  capability-scope-algebra.md  chat-sensor.md  code-ingest-pipeline.md  core-query-protocol.md  (+53 more)
eval/: __init__.py  code_probes.py  effector_drift.py  golden.py  metrics.py
ops/: apply.py  chat_sensor.py  ci_witness.py  code_lineage.py  code_sensor.py  code_snapshot.py  effect_catalog.py  effect_exec.py  effect_gate.py  effect_ledger.py  effects.py  gate.py  import_lint.py  ledger.py  levers.py  self_sensor.py  selfmod.py  selfmod_cli.py  supersede.py  type_gate.py
scheduler/: __init__.py  budget.py  chat_sync.py  code_sync.py  cron.py  interface.py  presence.py  queue.py  research.py  router.py  supervisor.py  vault_sync.py
scripts/: board.py  build_sandbox_image.sh  check_imports.py  ci_witness.py  cockpit.sh  docket.py  eval.py  exhaust_report.py  experiment.py  fibers.py  gen_attestation_keys.py  ingest.py  ingest_founding.py  ingest_self_knowledge.py  migrate_chunk_keys.py  migrate_provenance_split.py  mint_ids.py  monitor.py  orchestrator-launch.sh  palace.py  purge_raw.py  readmap.py  reembed_bodyonly.py  report.py  review.py  run_with_secrets.sh  sandbox.py  sense_self.py  sign-askpass.sh  snapshot_code.py  supersede.py  sweep.py  talk.py  tune.py  verdict.py  verify_attestation.py  verify_planes.py  watch.py
site/: architecture.md  index.md
tests/: conftest.py  test_derived_store.py  test_dreamer.py  test_fetcher.py  test_gate_fsm.py  test_import_firewall.py  test_librarian_live.py  test_loader_fsm.py  test_queue.py  test_selfcheck.py
(+734 files in other folders)
