[project]
name = "mind-palace"
version = "0.0.0"
description = "Sealed, offline-first personal AI — a mind palace. Built phase by phase."
requires-python = ">=3.11"
# Runtime deps are intentionally minimal. The sealed core (Zone A) must not pull in
# any package that can reach the network (CONVENTIONS: "no import path that can reach
# the network"); HTTP to the local Ollama server uses the stdlib only.
dependencies = [
    "duckdb>=1.0",    # telemetry store (embedded, no daemon)
    "psutil>=5.9",    # system vitals (memory headroom, cpu, load)
    "lancedb>=0.10",  # thought-graph vectors (embedded, no daemon)
    "numpy>=1.26",    # deterministic embedding clustering for dreaming/curation (§9)
    "cryptography>=42",  # Ed25519 signing of attestations (runtime proof layer); not a net lib
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "hypothesis>=6.0",   # property-based tests for the invariant catalog (I6/I9/I10/I13)
]
# Zone B (edge) ONLY — never a core dependency. The research-airlock bridge talks to S3 with
# boto3; the import-firewall (ops/import_lint.py) forbids boto3 anywhere under core/. The
# bridge imports it lazily so tests (fake S3 client) don't need it installed.
edge = [
    "boto3>=1.34",
]
# Real-time vault watching (FSEvents/inotify). OPTIONAL: the watcher falls back to polling
# without it (core/ingest/watch.py), so it isn't a hard dependency. watchdog is a local
# filesystem library — no network — and is imported lazily.
watch = [
    "watchdog>=4.0",
]

[tool.pytest.ini_options]
# Top-level zone packages (core/, edge/, …) are importable without an editable install.
pythonpath = ["."]
testpaths = ["tests"]
# Markers are split two ways (test-organization.md): a *category* marker per directory
# (applied by each tests/<cat>/conftest.py) describing the execution profile, plus
# *capability* markers (live/podman/slow/needs_*) describing what infra a test needs.
markers = [
    # category (execution profile) — one per tests/ subdirectory
    "unit: fast, isolated, no I/O",
    "integration: component-pair tests with real local stores, no network",
    "e2e: full-pipeline tests (slow, may need models/podman)",
    "property: Hypothesis property-based + exhaustive FSM invariant checks",
    "metamorphic: input/output relationship tests (no ground truth)",
    "adversarial: red-team invariant-violation attempts through the interfaces",
    "integrity: firewall/provenance/attestation/import-lint — the non-skippable CI gate",
    "emergent: multi-component, concurrent, cross-invariant tests",
    "longitudinal: slow drift tests, scheduled only (excluded from default runs)",
    # capability (infra needed) — orthogonal to category
    "live: requires a running Ollama server and pulled models (deselect: -m 'not live')",
    "podman: requires a working rootless Podman (deselect: -m 'not podman')",
    "slow: takes >10s",
    "needs_models: requires Ollama models pulled",
    "needs_network: requires network (edge/cloud only — never core)",
]
# The longitudinal suite is opt-in: it runs against a continuously-running system, not in
# the standard inner loop. Exclude it from a bare `pytest`; opt in with `pytest tests/longitudinal`.
addopts = "-m 'not longitudinal'"
filterwarnings = [
    # LanceDB calls its own deprecated table_names() internally; not our code.
    "ignore:.*table_names.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
